glx/testdata/invalid/invalid-assertion-properties/persons/person-mother.glx
persons:
  person-mother:
    properties:
      name:
        value: "Mary Thompson"
        fields:
          given: "Mary"
          surname: "Thompson"
      gender: female
